<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>no.idporten</groupId>
    <artifactId>idporten-user-service</artifactId>
    <version>DEV-SNAPSHOT</version>
    <name>idporten-user-service</name>
    <description>ID-porten user service</description>
    <properties>
        <java.version>21</java.version>
        <idporten-validators.version>1.6.0</idporten-validators.version>
        <idporten-fnr-generate.version>1.0.1</idporten-fnr-generate.version>
        <springdoc.version>2.8.13</springdoc.version>
        <idporten-access-log.version>2.8.0</idporten-access-log.version>
        <idporten-audit-log.version>2.5.2</idporten-audit-log.version>
        <idporten-metric-constants.version>1.4.4</idporten-metric-constants.version>
        <nimbus.jose.jwt.version>9.23</nimbus.jose.jwt.version>
        <idporten-actuator-starter.version>2.0.0</idporten-actuator-starter.version>
        <mariadb-java-client.version>3.5.6</mariadb-java-client.version>
        <open.telemetry.version>1.54.1</open.telemetry.version>
        <redis.version>1.4.3</redis.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>no.idporten.actuator</groupId>
            <artifactId>idporten-actuator-starter</artifactId>
            <version>${idporten-actuator-starter.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.hibernate.validator</groupId>
                    <artifactId>hibernate-validator</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-mysql</artifactId>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>${mariadb-java-client.version}</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-api</artifactId>
            <version>${open.telemetry.version}</version>
        </dependency>
        <dependency>
            <groupId>no.idporten.logging</groupId>
            <artifactId>idporten-log-audit-spring-boot-3-starter</artifactId>
            <version>${idporten-audit-log.version}</version>
        </dependency>
        <dependency>
            <groupId>no.idporten.logging</groupId>
            <artifactId>idporten-access-log-spring-boot-3-starter</artifactId>
            <version>${idporten-access-log.version}</version>
        </dependency>
        <dependency>
            <groupId>no.idporten.validators</groupId>
            <artifactId>idporten-validators</artifactId>
            <version>${idporten-validators.version}</version>
        </dependency>
        <dependency>
            <groupId>no.idporten.metrics</groupId>
            <artifactId>idporten-metric-constants-lib</artifactId>
            <version>${idporten-metric-constants.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.fppt</groupId>
            <artifactId>jedis-mock</artifactId>
            <version>1.1.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.codemonstur</groupId>
            <artifactId>embedded-redis</artifactId>
            <version>${redis.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>no.idporten.test.generate</groupId>
            <artifactId>idporten-fnr-generate</artifactId>
            <version>${idporten-fnr-generate.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin> <!-- attach source package -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>github</id>
            <name>GitHub felleslosninger Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/felleslosninger/.github</url>
        </repository>
    </repositories>
</project>
